--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,6 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Service\FileUploader:
+    App\Service\PdfUploader:
         arguments:
             $targetDirectory: '%kernel.project_dir%/public/uploads/cv'
