--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-      - { path: ^/recruitment/new, roles: ROLE_USER }
+        - { path: /recruitment/new, roles: [] }
+        - { path: /recruitment, roles: ROLE_USER }
+        - { path: /recruitment/show, roles: ROLE_USER }
 
 when@test:
     security:
